workspace-sf/force-app/main/default/objects/InformacaoBancaria__c/InformacaoBancaria__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as informações bancárias das contas</description>
    <label>Informação bancária</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Informações bancárias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>