workspace-sf/force-app/main/default/objects/InformacaoBancaria__c/fields/Agencia__c.field-meta.xml
<CustomField>
    <fullName>Agencia__c</fullName>
    <label>Agência</label>
    <length>255</length>
    <type>Text</type>
</CustomField>