workspace-sf/force-app/main/default/objects/InformacaoBancaria__c/fields/BancoNew__c.field-meta.xml
<CustomField>
    <fullName>BancoNew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banco</label>
    <referenceTo>Banco__c</referenceTo>
    <relationshipLabel>Informações bancárias</relationshipLabel>
    <relationshipName>Informacoes_bancarias</relationshipName>
    <type>Lookup</type>
</CustomField>