workspace-sf/force-app/main/default/objects/InformacaoBancaria__c/fields/Digito__c.field-meta.xml
<CustomField>
    <fullName>Digito__c</fullName>
    <label>Dígito</label>
    <length>10</length>
    <type>Text</type>
</CustomField>