workspace-sf/force-app/main/default/objects/InformacaoBancaria__c/fields/ErroIntegracao__c.field-meta.xml
<CustomField>
    <fullName>ErroIntegracao__c</fullName>
    <label>Erro da integração</label>
    <type>TextArea</type>
</CustomField>