workspace-sf/force-app/main/default/objects/InformacaoBancaria__c/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Id externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>