workspace-sf/force-app/main/default/objects/InformacaoBancaria__c/fields/NomenclaturaPesquisa__c.field-meta.xml
<CustomField>
    <fullName>NomenclaturaPesquisa__c</fullName>
    <externalId>true</externalId>
    <label>Nomenclatura de Pesquisa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>