workspace-sf/force-app/main/default/objects/InformacaoBancaria__c/fields/NumeroConta__c.field-meta.xml
<CustomField>
    <fullName>NumeroConta__c</fullName>
    <label>Número da conta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>