workspace-sf/force-app/main/default/objects/InformacaoBancaria__c/fields/Papel__c.field-meta.xml
<CustomField>
    <fullName>Papel__c</fullName>
    <label>Papel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agenciador</fullName>
            </value>
            <value>
                <fullName>Parceiro</fullName>
            </value>
            <value>
                <fullName>Prestador</fullName>
            </value>
            <value>
                <fullName>Segurado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>