workspace-sf/force-app/main/default/objects/InformacaoBancaria__c/fields/Principal__c.field-meta.xml
<CustomField>
    <fullName>Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Define se a informação bancária é a principal informação da conta relacionada.</inlineHelpText>
    <label>Principal?</label>
    <type>Checkbox</type>
</CustomField>