workspace-sf/force-app/main/default/objects/InformacaoBancaria__c/fields/StatusIntegracao__c.field-meta.xml
<CustomField>
    <fullName>StatusIntegracao__c</fullName>
    <label>Status da integração</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validada</fullName>
            </value>
            <value>
                <fullName>Não validada</fullName>
            </value>
            <value>
                <fullName>Aguardando validação</fullName>
                <default>true</default>
                <label>Aguardando validação</label>
            </value>
            <value>
                <fullName>Não existe parceiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>