workspace-sf/force-app/main/default/objects/InformacaoBancaria__c/fields/TipoPessoa__c.field-meta.xml
<CustomField>
    <fullName>TipoPessoa__c</fullName>
    <label>Tipo de pessoa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>fisica</fullName>
                <label>Física</label>
            </value>
            <value>
                <fullName>juridica</fullName>
                <label>Jurídica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>