workspace-sf/force-app/main/default/objects/InformacaoBancaria__c/fields/VigenciaInicial__c.field-meta.xml
<CustomField>
    <fullName>VigenciaInicial__c</fullName>
    <label>Vigência Inicial</label>
    <type>Date</type>
</CustomField>