workspace-sf/force-app/main/default/objects/InformacaoBancaria__c/validationRules/ValidarPreenchimentoNumeroConta.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidarPreenchimentoNumeroConta</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNUMBER(NumeroConta__c)), 
    NOT(FIND(&apos;-&apos;, NumeroConta__c) == LEN(NumeroConta__c) - 1)
)</errorConditionFormula>
    <errorMessage>Preencha o número da conta com números (012345) ou formatado (01234-5)</errorMessage>
</ValidationRule>